force-app/main/default/objects/Pickup_Delivery_Schedule__c/Pickup_Delivery_Schedule__c.object-meta.xml
<CustomObject>
    <description>Standing pickup or delivery window for a supplier or customer Account.</description>
    <label>Pickup Delivery Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pickup Delivery Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>