force-app/main/default/objects/Pickup_Delivery_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account this standing schedule applies to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pickup Delivery Schedules</relationshipLabel>
    <relationshipName>Pickup_Delivery_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>