force-app/main/default/objects/Pickup_Delivery_Schedule__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <label>Window End</label>
    <required>true</required>
    <type>Time</type>
</CustomField>