force-app/main/default/objects/Pickup_Delivery_Schedule__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <label>Window Start</label>
    <required>true</required>
    <type>Time</type>
</CustomField>