force-app/main/default/objects/Pickup_Delivery_Schedule__c/validationRules/Window_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Window_End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>Window_End__c &lt;= Window_Start__c</errorConditionFormula>
    <errorDisplayField>Window_End__c</errorDisplayField>
    <errorMessage>Window End must be after Window Start.</errorMessage>
</ValidationRule>