force-app/main/default/objects/Pickup_Delivery_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Window_Start__c</columns>
    <columns>Window_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>